[package]
name = "biocommons-bioutils"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "(Partial) port of biocommons/bioutils to Rust"
license = "Apache-2.0"
homepage = "https://github.com/bihealth/bioutils-rs"
readme = "README.md"
rust-version = "1.64.0"

[lib]
name = "biocommons_bioutils"
path = "src/lib.rs"

[dependencies]
enum-map = "2.4"
flate2 = "1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.10"
insta = { version = "1.34.0", features = ["yaml"] }
pretty_assertions = "1.3"
